[package]
name = "witness-filler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
serde_json.workspace = true
ef-tests.path = "../ef-tests"

[lints]
workspace = true
